--- a/index.htm
+++ b/index.htm
@@ -2561,7 +2561,7 @@
 
 
 						</ul>
-						<div class="penci-pagination align-left">
+						<!-- <div class="penci-pagination align-left">
 							<ul class='page-numbers'>
 								<li><span aria-current="page" class="page-numbers current">1</span></li>
 								<li><a class="page-numbers"
@@ -2571,7 +2571,7 @@
 										href="page/2/index-1.htm?video=video-bg&#038;body=boxed-none#038;body=boxed-none"><i
 											class="penci-faicon fa fa-angle-right"></i></a></li>
 							</ul>
-						</div>
+						</div> -->
 					</div>
 
 
